Still trying to fix layout issues.

--- a/css/base.css
+++ b/css/base.css
@@ -148,9 +148,6 @@ a.captionOrange:hover {
 	background-color: #eeeeee;
 	background-color: rgba(238, 238, 238, 0.7);
 }
-.bricon {
-	background: url(../img/browser-icons.png);
-}
 
 .slide_container {
 	position: relative; 
